--- a/Product-Accounting-System/App.config
+++ b/Product-Accounting-System/App.config
@@ -3,7 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-<connectionStrings>
+<connectionStrings> 
 	
-<add name="Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ASUSVIVOBOOK15;initial catalog=Product-Accounting-System-Git;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+</connectionStrings>
 </configuration>
